--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
-venv/
+.obsidian/
+**/venv
+*.pyc
+*~
+__pycache__
+.DS_Store
+*.log
+*.env
+**/.env
+**/.log
+env
+.vscode
+**/*.csv
+**/typings
+/.idea/
+**/.mypy_cache
+**/access-log.json
+**/celerybeat-schedule
