--- a/requirements.txt
+++ b/requirements.txt
@@ -53,9 +53,11 @@ platformdirs==2.5.2
 prompt-toolkit==3.0.30
 psycopg2-binary==2.9.3
 pycodestyle==2.8.0
+pydantic==1.9.1
 pydocstyle==6.1.1
 pyflakes==2.4.0
 Pygments==2.12.0
+pymongo==4.2.0
 pyparsing==3.0.9
 python-crontab==2.6.0
 python-dateutil==2.8.2
