--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ bandit==1.7.4
 billiard==3.6.4.0
 black==22.6.0
 celery==5.2.7
+certifi==2022.6.15
+charset-normalizer==2.1.0
 click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
@@ -38,6 +40,8 @@ flake8-rst-docstrings==0.2.7
 flake8-string-format==0.3.0
 gitdb==4.0.9
 GitPython==3.1.27
+idna==3.3
+iniconfig==1.1.1
 isort==5.10.1
 kombu==5.2.4
 marshmallow==3.17.0
@@ -50,8 +54,10 @@ pathspec==0.9.0
 pbr==5.9.0
 pep8-naming==0.12.1
 platformdirs==2.5.2
+pluggy==1.0.0
 prompt-toolkit==3.0.30
 psycopg2-binary==2.9.3
+py==1.11.0
 pycodestyle==2.8.0
 pydantic==1.9.1
 pydocstyle==6.1.1
@@ -59,18 +65,24 @@ pyflakes==2.4.0
 Pygments==2.12.0
 pymongo==4.2.0
 pyparsing==3.0.9
+pytest==7.1.2
+pytest-celery==0.0.0
 python-crontab==2.6.0
 python-dateutil==2.8.2
 python-dotenv==0.20.0
+python-http-client==3.3.7
 pytz==2022.1
 PyYAML==6.0
 redis==4.3.4
+requests==2.28.1
 restructuredtext-lint==1.4.0
+sendgrid==6.9.7
 six==1.16.0
 smmap==5.0.0
 snowballstemmer==2.2.0
 split-settings==1.0.0
 sqlparse==0.4.2
+starkbank-ecdsa==2.0.3
 stevedore==4.0.0
 testfixtures==6.18.5
 tomli==2.0.1
@@ -79,6 +91,7 @@ types-PyYAML==6.0.10
 typing-inspect==0.7.1
 typing_extensions==4.3.0
 tzdata==2022.1
+urllib3==1.26.10
 vine==5.0.0
 wcwidth==0.2.5
 wemake-python-styleguide==0.16.1
