--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -8,26 +8,24 @@ services:
     volumes:
       - rabbit-data:/var/lib/rabbitmq/
       - rabbit-log:/var/log/rabbitmq
-    networks:
-      - backend_nw
 
   redis:
     image: 'bitnami/redis:latest'
     hostname: redis
+    expose:
+      - 6379
     environment:
       - ALLOW_EMPTY_PASSWORD=yes
-    networks:
-      - backend_nw
 
   postgres:
     image: postgres:13
     hostname: postgres
+    expose:
+      - 5432
     env_file:
       - .env
     volumes:
       - postgres:/var/lib/postgresql/data
-    networks:
-      - backend_nw
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready" ]
       interval: 10s
@@ -38,6 +36,8 @@ services:
     image: mongo
     hostname: mongo
     command: mongod --dbpath /data/db --port 27017
+    expose:
+      - 27017
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - mongodb:/data/db
@@ -46,26 +46,22 @@ services:
       interval: 10s
       timeout: 10s
       retries: 5
-    networks:
-      - backend_nw
 
   notification-consumers:
     build:
       context: ../notification-consumers
-    networks:
-      - backend_nw
     command: >
       python main.py
 
   notification-service-admin:
     build:
       context: ../notification-service
-    networks:
-      - backend_nw
     env_file:
-      - .env
-    command: >
-      ./manage.py runserver 0.0.0.0:8000
+      - ../notification-service/.env
+    ports:
+      - 8000:8000
+    entrypoint:
+      "entrypoint.sh"
     depends_on:
       rabbitmq:
         condition: service_started
@@ -77,12 +73,10 @@ services:
   notification-service-worker:
     build:
       context: ../notification-service
-    networks:
-      - backend_nw
     env_file:
-      - .env
+      - ../notification-service/.env
     command: >
-      celery -A config worker
+      celery -A config -b "redis://redis:6379/0" worker -l DEBUG
 
 volumes:
   postgres:
@@ -91,5 +85,6 @@ volumes:
   rabbit-log:
 
 networks:
-  backend_nw:
-    driver: bridge
+  default:
+    external:
+      name: netflix_nw
