--- a/setup.cfg
+++ b/setup.cfg
@@ -22,9 +22,7 @@ exclude =
 # Ignoring some errors in some files:
 per-file-ignores =
   # Enable `assert` keyword and magic numbers for tests:
-  tests/*.py: S101, WPS226, WPS432
-  ./ugc-service/ugc-api/src/api/v1/*.py: B008
-  ./ugc-service/ugc-api/src/services/mongo/*.py: B008
+  **/tests/*.py: S101, WPS226, WPS432
 
 [isort]
 profile = black
