--- a/notification-service/requirements.txt
+++ b/notification-service/requirements.txt
@@ -40,6 +40,7 @@ flake8-rst-docstrings==0.2.7
 flake8-string-format==0.3.0
 gitdb==4.0.9
 GitPython==3.1.27
+gunicorn==20.1.0
 idna==3.3
 iniconfig==1.1.1
 isort==5.10.1
@@ -86,8 +87,13 @@ starkbank-ecdsa==2.0.3
 stevedore==4.0.0
 testfixtures==6.18.5
 tomli==2.0.1
+types-cryptography==3.3.21
+types-pyOpenSSL==22.0.10
 types-pytz==2022.1.1
 types-PyYAML==6.0.10
+types-requests==2.28.5
+types-setuptools==63.2.2
+types-urllib3==1.26.17
 typing-inspect==0.7.1
 typing_extensions==4.3.0
 tzdata==2022.1
@@ -96,5 +102,3 @@ vine==5.0.0
 wcwidth==0.2.5
 wemake-python-styleguide==0.16.1
 wrapt==1.14.1
-gunicorn
-flake8-html
