--- a/notification-service/requirements.txt
+++ b/notification-service/requirements.txt
@@ -3,6 +3,7 @@ asgiref==3.5.2
 astor==0.8.1
 async-timeout==4.0.2
 attrs==21.4.0
+backports.zoneinfo==0.2.1
 bandit==1.7.4
 billiard==3.6.4.0
 black==22.6.0
@@ -44,7 +45,10 @@ gunicorn==20.1.0
 idna==3.3
 iniconfig==1.1.1
 isort==5.10.1
+Jinja2==3.1.2
 kombu==5.2.4
+MarkupSafe==2.1.1
+
 marshmallow==3.17.0
 marshmallow-enum==1.5.1
 mccabe==0.6.1
