--- a/setup.cfg
+++ b/setup.cfg
@@ -29,3 +29,7 @@ profile = black
 
 [mypy]
 ignore_missing_imports = true
+plugins = mypy_django_plugin.main
+
+[mypy.plugins.django-stubs]
+django_settings_module = "config.settings"
