--- a/setup.cfg
+++ b/setup.cfg
@@ -16,13 +16,15 @@ exclude =
   .git
   __pycache__
   .venv
-  ./ugc-service/ugc-api/tests
+  ./notification-service/src/distributions/migrations/
   *env
+  ./notification-consumers/tests/
 
 # Ignoring some errors in some files:
 per-file-ignores =
   # Enable `assert` keyword and magic numbers for tests:
   **/tests/*.py: S101, WPS226, WPS432
+  ./notification-service/src/distributions/apps.py: F401
 
 [isort]
 profile = black
