--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,12 @@ profile = black
 
 [mypy]
 ignore_missing_imports = true
-plugins = mypy_django_plugin.main
+mypy_path = ./notification-service/src
+plugins =
+    mypy_django_plugin.main
 
 [mypy.plugins.django-stubs]
 django_settings_module = "config.settings"
+
+[mypy-*/migrations/*]
+ignore_errors = True
