--- a/notification-service/.env.sample
+++ b/notification-service/.env.sample
@@ -15,3 +15,4 @@ MONGO_DB=notifications
 MONGO_COLLECTION=notifications
 BROKER_HOST=rabbitmq
 BROKER_PORT=5672
+ALLOWED_HOSTS='127.0.0.1 localhost'
