--- a/notification-consumers/tests/functional/Dockerfile
+++ b/notification-consumers/tests/functional/Dockerfile
@@ -6,6 +6,6 @@ ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
 COPY requirements.txt .
-RUN pip install -r requirements.txt
+RUN pip install -r requirements.txt --no-cache-dir
 
 COPY . .
